--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -16,7 +16,7 @@
     <% @items.each do |item| %>
       <tr>
         <td><%= item.title %></td>
-        <td><%= item.list %></td>
+        <td><%= item.list_name %></td>
         <td><%= item.points %></td>
         <td><%= link_to 'Show', item %></td>
         <td><%= link_to 'Edit', edit_item_path(item) %></td>
