--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -18,7 +18,7 @@
       <tr>
         <td><%= link_to item.id, item_path(item) %></td>
         <td><%= item.title %></td>
-        <td><%= item.list %></td>
+        <td><%= item.list_name %></td>
         <td><%= item.points %></td>
         <td><%=l item.created_at %></td>
         <td>
