refactor list names, list select tag in items/form

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -8,7 +8,7 @@
   <div class="control-group">
     <%= f.label :list, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :list, :class => 'text_field' %>
+    <%= f.select :list, list_select_options, class: 'text_field' %>
     </div>
   </div>
   <div class="control-group">
