WIP css home#index

--- a/app/assets/stylesheets/home.css.less
+++ b/app/assets/stylesheets/home.css.less
@@ -1,3 +1,45 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Less here: http://lesscss.org/
+
+
+/*
+font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Quicksand', sans-serif;
+font-family: 'Lobster', cursive;
+font-family: 'Roboto', sans-serif;
+*/
+
+body {
+  background-color: #ecf0f1;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+}
+
+h1 {
+  font-weight: 100;
+  font-size: 6em;
+  line-height: 2em;
+  text-align: center;
+  color: #2c3e50;
+}
+
+.best-list {
+  font-size: 3em;
+  line-height: 1.2em;
+  text-align: center;
+
+  img {
+    width: 20%;
+    display: block;
+    margin: auto;
+    margin-bottom: 1em;
+  }
+
+  strong {
+    display: block;
+    font-size: 1.7em;
+    line-height: 1.2em;
+    font-weight: 300;
+  }
+}
