WIP css home#index all scores centered

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,8 +21,12 @@
   </li>
 </ul>
 
-<ul>
+
+<ul class="items">
 <% @items.each do |i| %>
-  <li><%= i.list_name %> : <%= i.title %> (<%= i.points %>)</li>
+  <li class="list<%= i.list %>">
+    <%= i.title %>
+    <strong><%= i.points %> <small>pts</small></strong>
+  </li>
 <% end %>
 </ul>
