--- a/app/assets/stylesheets/home.css.less
+++ b/app/assets/stylesheets/home.css.less
@@ -43,7 +43,7 @@ h1 {
 
 
 .best-list {
-  font-size: 3em;
+  font-size: 3.5em;
   line-height: 1.2em;
   text-align: center;
 
@@ -57,7 +57,7 @@ h1 {
   strong {
     display: block;
     font-size: 1.7em;
-    line-height: 1.2em;
+    line-height: 1.4em;
     font-weight: 300;
   }
 }
@@ -65,7 +65,7 @@ h1 {
 
 .scores {
   list-style: none;
-  font-size: 3em;
+  font-size: 3.5em;
   margin: 0;
   margin-top: 1em;
 
@@ -77,7 +77,7 @@ h1 {
 
   li {
     display: inline-block;
-    width: 48%;
+    width: 49%;
     text-align: center;
     line-height: 2em;
 
@@ -88,6 +88,36 @@ h1 {
       small { 
         font-size: 0.3em; 
         font-weight: 100;
+      }
+    }
+  }
+}
+
+
+.items {
+  list-style: none;
+  font-size: 2em;
+  margin: 0;
+
+  li {
+    width: 49%;
+    text-align: center;
+    line-height: 2em;
+    clear: both;
+
+    &.list0 {
+      margin-left: 2.5%;
+
+      strong {
+        float: right;
+      }
+    }
+
+    &.list1 {
+      margin-left: 46.5%;
+
+      strong {
+        float: left;
       }
     }
   }
