--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,7 +26,7 @@
 <% @items.each do |i| %>
   <li class="list<%= i.list %>">
     <%= i.title %>
-    <strong><%= i.points %> <small>pts</small></strong>
+    <strong class="<%= if i.points > 0 then 'pos' else 'neg' end %>"><%= i.points %> <small>pts</small></strong>
   </li>
 <% end %>
 </ul>
