WIP css home#index

--- a/app/assets/stylesheets/home.css.less
+++ b/app/assets/stylesheets/home.css.less
@@ -101,12 +101,15 @@ h1 {
   margin: 0;
 
   li {
-    width: 43%;
-    text-align: center;
-    line-height: 2em;
+    width: 41%;
+    // text-align: center;
+    line-height: 1.3em;
     clear: both;
+    margin-bottom: 1em;
 
     strong {
+      text-align: center;
+
       small {
         font-weight: 100;
         font-size: 0.6em;
@@ -121,14 +124,19 @@ h1 {
 
       strong {
         float: right;
+        text-align: right;
+        margin-left: 10%;
       }
     }
 
     &.list1 {
       margin-left: 50%;
+      text-align: right;
 
       strong {
         float: left;
+        text-align: left;
+        margin-right: 10%;
       }
     }
   }
