--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 
 
       <footer>
-        <p>#rose2014</p>
+        <p>Made with love in A406</p>
       </footer>
 
     </div> <!-- /container -->
