--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,11 +1,10 @@
 <%- model_class = Item -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-</div>
-<table class="table">
+
+<h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+
+<table class="table items-table">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:title) %></th>
       <th><%= model_class.human_attribute_name(:list) %></th>
       <th><%= model_class.human_attribute_name(:points) %></th>
@@ -16,7 +15,6 @@
   <tbody>
     <% @items.each do |item| %>
       <tr>
-        <td><%= link_to item.id, item_path(item) %></td>
         <td><%= item.title %></td>
         <td><%= item.list_name %></td>
         <td><%= item.points %></td>
@@ -27,14 +25,13 @@
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       item_path(item),
                       :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger' %>
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) } %>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
+<%= link_to '+ New item +',
             new_item_path,
-            :class => 'btn btn-primary' %>
+            :class => 'new-item' %>
