--- a/app/assets/stylesheets/items.css.less
+++ b/app/assets/stylesheets/items.css.less
@@ -22,3 +22,32 @@ a {
   font-size: 2em;
   margin-top: 1em;
 }
+
+
+form {
+  font-size: 2em;
+
+  input, select, textarea {
+    width: 70%;
+    margin: auto;
+    display: block;
+    text-align: center;
+    color: @blue;
+  }
+
+  label {
+    text-align: center;
+    display: block;
+  }
+
+  .control-group {
+    margin-bottom: 2em;
+  }
+
+  a {
+    display: block;
+    text-align: center;
+    font-size: 0.7em;
+    margin-top: 1em;
+  }
+}
