--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', '<%= ENV['ANALYTICS'] %>', 'pour-qui-faut-il-voter.herokuapp.com');
+      ga('create', '<%= ENV['ANALYTICS'] %>', '<%= ENV['ANALYTICS_DOMAIN'] %>');
       ga('send', 'pageview');
 
     </script>
