add github link in footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 
 
       <footer>
-        <p>Made with love in A406</p>
+        <p>Made with love in A406 - <%= link_to "Fork me on GitHub", "https://github.com/allegrem/pour-qui-faut-il-voter" %></p>
       </footer>
 
     </div> <!-- /container -->
