--- a/app/assets/stylesheets/home.css.less
+++ b/app/assets/stylesheets/home.css.less
@@ -41,7 +41,7 @@ h1 {
   text-align: center;
 
   img {
-    width: 20%;
+    max-height: 40%;
     display: block;
     margin: auto;
     margin-bottom: 1em;
@@ -103,6 +103,8 @@ h1 {
       text-align: center;
       font-size: 1.5em;
 
+      img { display: none; }
+
       small {
         font-weight: 100;
         font-size: 0.5em;
@@ -141,6 +143,7 @@ footer {
   margin-top: 3%;
   margin-left: 1%;
   color: lighten(@blue, 30%);
+  clear: both;
 
   a {
     color: lighten(@blue, 30%);
