bugfix css + weird list name

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
   </li>
   <li>
     <%= image_tag "list1.jpg", alt: "Bedzacoatl" %>
-    Bedzacoatl
+    Bedzalcoatl
     <strong><%= Item.total_points 1 %> <small>pts</small></strong>
   </li>
 </ul>
