--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,14 @@
   <h1>Pour qui faut-il voter ?</h1>
 
   <p class="best-list">
+    <% if Item.total_points(0) == Item.total_points(1) %>
+    <%= image_tag "bedzoum.png", alt: "BEDzoum" %>
+    Il faut voter <strong>BEDzoum</strong>
+    <small>Parce qu'en cas d'égalité, ce sont toujours eux qui gagnent.</small>
+    <% else %>
     <%= image_tag "list#{@best_list}.jpg", alt: Item::LIST_NAMES[@best_list] %>
     Il faut voter <strong><%= Item::LIST_NAMES[@best_list] %></strong>
+    <% end %>
   </p>
 </header>
 
