--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,6 +2,9 @@
 
 <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 
+<p><%= link_to '+ New item +', new_item_path, :class => 'new-item' %></p>
+
+
 <table class="table items-table">
   <thead>
     <tr>
@@ -32,6 +35,3 @@
   </tbody>
 </table>
 
-<%= link_to '+ New item +',
-            new_item_path,
-            :class => 'new-item' %>
