--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,10 @@
 
     <div class="container-fluid">
       <nav>
-        <%= link_to "< Back to home page", home_path %> 
+        <ul>
+          <li><%= link_to "Back to home page", home_path %></li>
+          <li><%= link_to "Item list", items_path %></li>
+        </ul>
       </nav>
 
       <%= yield %>
