--- a/app/assets/stylesheets/items.css.less
+++ b/app/assets/stylesheets/items.css.less
@@ -23,6 +23,26 @@ nav {
 }
 
 
+.notice, .alert {
+  width: 40%;
+  margin: auto;
+  position: fixed;
+  top: 0;
+  left: 30%;
+  text-align: center;
+  font-size: 1.4em;
+  line-height: 1.4em;
+}
+
+.alert {
+  background-color: #c0392b;
+}
+
+.notice {
+  background-color: #27ae60;
+}
+
+
 a {
   color: @cloud;
 }
