add invitations and logout links in layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,8 @@
         <ul>
           <li><%= link_to "Back to home page", home_path %></li>
           <li><%= link_to "Item list", items_path %></li>
+          <li><%= link_to "Invitations", new_admin_invitation_path %></li>
+          <li><%= link_to "Logout", destroy_admin_session_path, method: :delete %></li>
         </ul>
       </nav>
 
