--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
           <% unless params[:action] == 'new' && params[:controller] == "devise/sessions" %>
           <li><%= link_to "Item list", items_path %></li>
           <li><%= link_to "Invitations", new_admin_invitation_path %></li>
+          <li><%= link_to "Logs", logs_path %></li>
           <li><%= link_to "Logout", destroy_admin_session_path, method: :delete %></li>
           <% end %>
         </ul>
