display admin name in navbar

--- a/app/assets/stylesheets/items.css.less
+++ b/app/assets/stylesheets/items.css.less
@@ -6,9 +6,15 @@ nav {
   margin-top: 10px;
   margin-bottom: -30px;
   font-size: 1.3em;
+  width: 100%;
 
   ul {
     list-style: none;
+    display: inline-block;
+
+    &.right {
+      float: right;
+    }
 
     li {
       display: inline-block;
@@ -20,6 +26,11 @@ nav {
       padding-left: 15px;
     }
   }
+}
+
+
+h1 {
+  clear: both;
 }
 
 
