--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,9 @@
           <li><%= link_to "Item list", items_path %></li>
           <li><%= link_to "Invitations", new_admin_invitation_path %></li>
           <li><%= link_to "Logs", logs_path %></li>
+        </ul>
+        <ul class="right">
+          <li>Hello <%= current_admin.name %></li>
           <li><%= link_to "Logout", destroy_admin_session_path, method: :delete %></li>
           <% end %>
         </ul>
