--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
       <nav>
         <ul>
           <li><%= link_to "Back to home page", home_path %></li>
-          <% unless params[:action] == 'new' && params[:controller] == "devise/sessions" %>
+          <% if current_admin %>
           <li><%= link_to "Item list", items_path %></li>
           <li><%= link_to "Invitations", new_admin_invitation_path %></li>
           <li><%= link_to "Logs", logs_path %></li>
