display challenge label on items

--- a/app/assets/stylesheets/items.css.less
+++ b/app/assets/stylesheets/items.css.less
@@ -11,6 +11,22 @@
 }
 
 
+.items-table {
+  td:first-child {
+    width: 50%;
+  }
+
+  .challenge-label {
+    background-color: @cloud;
+    color: @blue;
+    font-weight: 300;
+    padding: 2px 5px;
+    border-radius: 0.3em;
+    margin-right: 0.7em;
+  }
+}
+
+
 .new-item {
   text-align: center;
   display: block;
