--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -8,20 +8,26 @@
 <table class="table items-table">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:title) %></th>
-      <th><%= model_class.human_attribute_name(:list) %></th>
-      <th><%= model_class.human_attribute_name(:points) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th>Content</th>
+      <th>List</th>
+      <th>Pts</th>
+      <th>Created at</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
     <% @items.each do |item| %>
       <tr>
         <td><%= item.title %></td>
-        <td><%= item.list_name %></td>
+        <td>
+          <% if item.challenge? %>
+            <span class="challenge-label">Challenge</span>
+          <% else %>
+            <%= item.list_name %>
+          <% end %>
+        </td>
         <td><%= item.points %></td>
-        <td><%=l item.created_at %></td>
+        <td><%= item.created_at.to_s %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_item_path(item), :class => 'btn btn-mini' %>
