--- a/app/assets/stylesheets/home.css.less
+++ b/app/assets/stylesheets/home.css.less
@@ -140,6 +140,13 @@ h1 {
 }
 
 
+.back_link {
+  text-align: center;
+  font-size: 2em;
+  margin-bottom: 4em;
+}
+
+
 footer {
   font-size: 0.8em;
   margin-top: 3%;
