--- a/app/views/home/challenges.html.erb
+++ b/app/views/home/challenges.html.erb
@@ -6,16 +6,5 @@
 
 <p class="back_link"><%= link_to "Retour à l'accueil", home_path %></p>
 
-<ul class="scores">
-  <li>
-    <%= link_to image_tag("list0.jpg", alt: "The Bedfathers"), "http://thebedfathers.com/" %>
-    The Bedfathers
-    <strong><%= Item.total_points 0 %> <small>pts</small></strong>
-  </li>
-  <li>
-    <%= link_to image_tag("list1.jpg", alt: "Bedzacoatl"), "http://bedzalcoatl.fr/" %>
-    Bedzalcoatl
-    <strong><%= Item.total_points 1 %> <small>pts</small></strong>
-  </li>
-</ul>
+<%= render 'scores' %>
 
