--- a/app/views/home/challenges.html.erb
+++ b/app/views/home/challenges.html.erb
@@ -4,7 +4,6 @@
 
 </header>
 
-<p class="back_link"><%= link_to "Retour à l'accueil", home_path %></p>
+<p class="big-link"><%= link_to "Retour à l'accueil", home_path %></p>
 
 <%= render 'scores' %>
-
