display and design challenge list

--- a/app/assets/stylesheets/home.css.less
+++ b/app/assets/stylesheets/home.css.less
@@ -140,6 +140,24 @@ h1 {
 }
 
 
+.items.challenges {
+  margin-top: 2em;
+
+  li {
+    width: 80%;
+    margin: auto;
+    margin-bottom: 1em;
+
+    strong {
+      width: 3em;
+      text-align: right;
+      margin-right: 1em;
+      float: left;
+    }
+  }
+}
+
+
 .big-link {
   text-align: center;
   font-size: 2em;
