--- a/app/assets/stylesheets/home.css.less
+++ b/app/assets/stylesheets/home.css.less
@@ -18,7 +18,12 @@ body {
 header {
   color: @blue;
   background-color: @cloud;
-  padding-bottom: 7em;
+  padding-bottom: 3em;
+
+  .big-link {
+    font-size: 1.5em;
+    margin-top: 3em;
+  }
 }
 
 .container-fluid {
@@ -161,7 +166,6 @@ h1 {
 .big-link {
   text-align: center;
   font-size: 2em;
-  margin-bottom: 4em;
 }
 
 
