Revert "remove link on home page"
This reverts commit 347913dfa9bb9f23fc630efdd4afcc4f85da7c18.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,6 +11,8 @@
     Il faut voter <strong><%= Item::LIST_NAMES[@best_list] %></strong>
     <% end %>
   </p>
+  
+  <p class="big-link"><%= link_to "Voir la liste des challenges en cours", challenges_path %></p>
 </header>
 
 
