--- a/app/views/home/challenges.html.erb
+++ b/app/views/home/challenges.html.erb
@@ -15,4 +15,4 @@
   <% end %>
 </header>
 
-<p class="big-link"><%= link_to "Retour à l'accueil", home_path %></p>
+<p class="big-link"><%= link_to "Retour à l'accueil", root_path %></p>
