Update for Forum campaign

--- a/app/views/home/_scores.html.erb
+++ b/app/views/home/_scores.html.erb
@@ -1,12 +1,12 @@
 <ul class="scores">
   <li>
-    <%= link_to image_tag("list0.jpg", alt: "The Bedfathers"), "http://thebedfathers.com/" %>
-    The Bedfathers
+    <%= link_to image_tag("list0.jpg", alt: "Baba Forum"), "http://www.babaforum.org/" %>
+    Baba Forum
     <strong><%= Item.total_points 0 %> <small>pts</small></strong>
   </li>
   <li>
-    <%= link_to image_tag("list1.jpg", alt: "Bedzacoatl"), "http://bedzalcoatl.fr/" %>
-    Bedzalcoatl
+    <%= link_to image_tag("list1.jpg", alt: "Forum Boyard"), "http://www.bonjour404.fr/random/" %>
+    Forum Boyard
     <strong><%= Item.total_points 1 %> <small>pts</small></strong>
   </li>
 </ul>
