--- a/app/assets/stylesheets/mobile.css.less
+++ b/app/assets/stylesheets/mobile.css.less
@@ -21,6 +21,14 @@
   }
 
 
+  .box {
+    // display: block;
+    width: 70%;
+    margin-bottom: 20px;
+    margin-top: 0;
+  }
+
+
   .scores {
     padding: 0;
 
