--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
           <li><%= link_to "Back to home page", home_path %></li>
           <% if current_admin %>
           <li><%= link_to "Item list", items_path %></li>
+          <li><%= link_to "Chat", chat_index_path %></li>
           <li><%= link_to "Invitations", new_admin_invitation_path %></li>
           <li><%= link_to "Logs", logs_path %></li>
         </ul>
