--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,7 +20,7 @@
       </div>
     <% end %>
 
-    <%= link_to '#' do %>
+    <%= link_to wall_path do %>
       <div class="box">
         <h2>The Wall</h2>
         <%= image_tag "chat.svg", alt: "The Wall" %>
