--- a/app/assets/stylesheets/mobile.css.less
+++ b/app/assets/stylesheets/mobile.css.less
@@ -77,4 +77,40 @@
       }
     }
   }
+
+
+  dl.chats {
+    margin: 10px;
+
+    dt {
+      font-size: 0.7em;
+      width: 30%;
+      margin-right: 10px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      margin-left: 0;
+    }
+
+    dd {
+      margin-left: 0;
+      margin-bottom: 10px;
+    }
+
+    time {
+      font-size: 0.4em;
+      display: block;
+    }
+  }
+
+
+  #new_chat {
+    margin-top: 30px;
+    margin-bottom: 30px;
+
+    input {
+      display: block;
+      width: 80% !important;
+      margin-bottom: 10px;
+    }
+  }
 }
