--- a/app/assets/stylesheets/home.css.less
+++ b/app/assets/stylesheets/home.css.less
@@ -226,16 +226,18 @@ dl.chats {
   margin: 1em 10%;
 
   dt {
-    display: block;
-    float: left;
+    display: inline-block;
     margin-right: 40px;
-    width: 40%;
+    width: 35%;
     font-weight: 300;
     text-align: right;
+    clear: both;
   }
 
   dd {
-    display: block;
+    display: inline-block;
+    width: 55%;
+    margin-bottom: 10px;
   }
 
   time {
