--- a/app/assets/stylesheets/admin.css.less
+++ b/app/assets/stylesheets/admin.css.less
@@ -52,3 +52,19 @@ h1 {
 .notice {
   background-color: #27ae60;
 }
+
+
+
+.new_admin {
+  text-align: center;
+  display: block;
+  font-size: 2em;
+  margin-top: 1em;
+}
+
+
+#error_explanation {
+  h2 {
+    font-size: 1em;
+  }
+}
