--- a/app/views/devise/invitations/new.html.erb
+++ b/app/views/devise/invitations/new.html.erb
@@ -1,12 +1,18 @@
-<h1><%= t "devise.invitations.new.header" %></h1>
+<h1>Invitation</h1>
 
 <%= form_for resource, :as => resource_name, :url => invitation_path(resource_name), :html => {:method => :post} do |f| %>
-  <%= devise_error_messages! %>
+  <div id="error_explanation">
+    <%= devise_error_messages! %>
+  </div>
 
 <% resource.class.invite_key_fields.each do |field| -%>
-  <p><%= f.label field %><br />
-  <%= f.text_field field %></p>
+  <div class="control-group">
+    <%= f.label field, :class => 'control-label' %>
+    <%= f.text_field field, :class => 'text_field' %>
+  </div>
 <% end -%>
 
-  <p><%= f.submit t("devise.invitations.new.submit_button") %></p>
+  <div class="form-actions">
+    <%= f.submit "Envoyer", :class => 'btn btn-primary' %>
+  </div>
 <% end %>
