--- a/app/assets/stylesheets/home.css.less
+++ b/app/assets/stylesheets/home.css.less
@@ -245,6 +245,10 @@ dl.chats {
     font-weight: 100;
     font-size: 0.5em;
     margin-right: 10px;
+
+    &:before {
+      content: 'il y a '
+    }
   }
 }
 
